# edgelink-template

./: .gitignore  Cargo.toml  LICENSE  README.md  wrangler.toml
src/: lib.rs  routes.rs
src/routes/: create.rs  home.rs  not_found.rs  redirect.rs
